Fixed spelling curiosity shop game design

--- a/projects/gamedesign/index.html
+++ b/projects/gamedesign/index.html
@@ -162,7 +162,7 @@
 
 	    <p><b>Regler</b></p>
             <ul>
-              <li>Nell begynner spillet med et par runder forsprang: Quilt og Nell starter i The Old Curiosity shop.</li>
+              <li>Nell begynner spillet med et par runder forsprang: Quilp og Nell starter i The Old Curiosity shop.</li>
               <li>Kaster terning: Gå etter terningsøyne</li>
               <li>Items: Fra the old curiosity shop. Potions, mekaniske ting, etc.</li>
               <li>Nell er etterlyst av Quilp og må unngå enkelte steder</li>
