Fixed spelling diamond game design

--- a/projects/gamedesign/index.html
+++ b/projects/gamedesign/index.html
@@ -130,7 +130,7 @@
               <li>Begynner på hver ende: Møter hverandre</li>
               <li>Kaster terning: Gå etter terningsøyne</li>
               <li>Trekke kort: Få utfordringer</li>
-              <li>Kom i midten og ta "tingen": Eller sloss den osm har tingen</li>
+              <li>Kom i midten og ta "tingen": Eller sloss den som har tingen</li>
               <li>Ta tingen tilbake til din base</li>
             </ul>
 
