Fixed spelling mistake game design

--- a/projects/gamedesign/index.html
+++ b/projects/gamedesign/index.html
@@ -101,7 +101,7 @@
             <ul>
               <li>Tegn dragen</li>
               <li>Tegn brettet</li>
-              <li>Tegn coveret av brettet</li>
+              <li>Tegn coveret av brettspillet</li>
               <li>Design character cards (må ha antall liv og penger på seg, og en måte å indikere hvor mye av dette en spiller har igjen). Hvilke stats skal en spiller ha?</li>
               <li>Design klassene i spillet (cleric, druid, etc.)</li>
               <li>Lag kort for loot</li>
@@ -138,7 +138,7 @@
             <ul>
               <li>Bestem hva "tingen" er: En stjerne? En skatt?</li>
               <li>Tegn brettet</li>
-              <li>Tegn coveret av brettet</li>
+              <li>Tegn coveret av brettspillet</li>
               <li>Bestem terninger for spillet</li>
               <li>Design kort for utfordringer</li>
               <li>Hvordan fungerer slossingen?</li>
