--- a/projects/gamedesign/index.html
+++ b/projects/gamedesign/index.html
@@ -136,7 +136,7 @@
 
 	    <p><b>Todo:</b></p>
             <ul>
-              <li>Bestem hva "tingen" er: En stjerne? En skatt?</li>
+              <li>Bestem hva "tingen" er: En stjerne? En skatt? En krone? Det akn kun være en konge</li>
               <li>Tegn brettet</li>
               <li>Tegn coveret av brettspillet</li>
               <li>Bestem terninger for spillet</li>
