Fixed final image game design

--- a/projects/gamedesign/index.html
+++ b/projects/gamedesign/index.html
@@ -81,7 +81,7 @@
             <img src="images/dragon.png">
             <img src="images/fight.jpeg">
             <img src="images/fire.jpeg">
-            <img src="images/dragons.png">
+            <img src="images/dragons.jpeg">
 
 	    <p><b>Hooks</b></p>
             <ul>
