--- a/todo.html
+++ b/todo.html
@@ -51,7 +51,11 @@
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
+Cut nails</li>
+<li><input type="checkbox" disabled="" checked="" />
+Shave beard</li>
+<li><input type="checkbox" disabled="" checked="" />
 Take dry clothes up to room</li>
 <li><input type="checkbox" disabled="" checked="" />
 Consider what to do with github pro</li>
@@ -59,8 +63,6 @@ Consider what to do with github pro</li>
 Make solid work in browser</li>
 <li><input type="checkbox" disabled="" />
 Review Getting Things Done in three months -&gt; january-2023</li>
-<li><input type="checkbox" disabled="" />
-Do global game jam in January</li>
 <li><input type="checkbox" disabled="" />
 Buy a book shelf</li>
 <li><input type="checkbox" disabled="" />
