Added due dates to calendar

--- a/todo.html
+++ b/todo.html
@@ -247,10 +247,14 @@ website for each project?</h6>
 05.03.2024 #game-design</label></li>
 <li><label><input type="checkbox" />Game Design assignemnt 2 -&gt;
 12.03.2024 #game-design</label></li>
+<li><label><input type="checkbox" />Compulsory 2 programming II -&gt;
+week 10 #programming</label></li>
+<li><label><input type="checkbox" />Compulsory 3 programming II -&gt;
+week 17 #programming</label></li>
 <li><label><input type="checkbox" />Exam Mathematics II -&gt; 07.05.2024
 #mathematics</label></li>
-<li><label><input type="checkbox" />Exam Game Deisgn -&gt; 13.05.2024
-#design</label></li>
+<li><label><input type="checkbox" />Exam Game Design -&gt; 13.05.2024
+#game-design</label></li>
 <li><label><input type="checkbox" />Exam Programming II -&gt; 21.05.2024
 #programming</label></li>
 </ul>
@@ -430,9 +434,11 @@ to some day</h6>
                 cal.colorfulSelect('17/11/2024', 'jsCalendar-colorful-blue');
                 cal.colorfulSelect('5/3/2024', 'jsCalendar-colorful-orange');
                 cal.colorfulSelect('13/3/2024', 'jsCalendar-colorful-orange');
+                cal.colorfulSelect('04/3/2024', 'jsCalendar-colorful-green');
                 }
                 if (month == 4)
                 {
+                cal.colorfulSelect('22/4/2024', 'jsCalendar-colorful-green');
                 }
                 if (month == 5)
                 {
