--- a/todo.html
+++ b/todo.html
@@ -47,16 +47,14 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
-<ul class="task-list">
-<li><input type="checkbox" disabled="" />
-Take out matavfall</li>
-<li><input type="checkbox" disabled="" />
-Pante flasker</li>
-</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" checked="" />
+Take out matavfall</li>
+<li><input type="checkbox" disabled="" checked="" />
+Pante flasker</li>
 <li><input type="checkbox" disabled="" />
 Code fencing game in solid</li>
 <li><input type="checkbox" disabled="" />
