Added another item to inbox

--- a/todo.html
+++ b/todo.html
@@ -47,20 +47,26 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Learn to play with a rubix cube</li>
+<li><input type="checkbox" disabled="" />
+Complete learn rubix cube video <a href="https://www.youtube.com/watch?v=1t1OL2zN0LQ">https://www.youtube.com/watch?v=1t1OL2zN0LQ</a></li>
+</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Take out matavfall</li>
-<li><input type="checkbox" disabled="" checked="" />
-Pante flasker</li>
 <li><input type="checkbox" disabled="" />
 Code fencing game in solid</li>
 <li><input type="checkbox" disabled="" />
 Read for 20 min</li>
 <li><input type="checkbox" disabled="" />
 Write for 20 min</li>
+<li><input type="checkbox" disabled="" checked="" />
+Take out matavfall</li>
+<li><input type="checkbox" disabled="" checked="" />
+Pante flasker</li>
 <li><input type="checkbox" disabled="" checked="" />
 Take library books back (hamar and inn)</li>
 <li><input type="checkbox" disabled="" checked="" />
