Added item to inbox

--- a/todo.html
+++ b/todo.html
@@ -49,14 +49,16 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Learn to play with a rubix cube</li>
-<li><input type="checkbox" disabled="" />
-Complete learn rubix cube video <a href="https://www.youtube.com/watch?v=1t1OL2zN0LQ">https://www.youtube.com/watch?v=1t1OL2zN0LQ</a></li>
+Fix solid gles2drawable destructor a drawable is deleted (FPSCounter does not get removed every frame)</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Complete learn rubix cube video <a href="https://www.youtube.com/watch?v=1t1OL2zN0LQ">https://www.youtube.com/watch?v=1t1OL2zN0LQ</a></li>
+<li><input type="checkbox" disabled="" />
+Learn to play with a rubix cube</li>
 <li><input type="checkbox" disabled="" />
 Code fencing game in solid</li>
 <li><input type="checkbox" disabled="" />
