Nevermind, turns out iit was the Sprite class which is cursed.... leaks memory

--- a/todo.html
+++ b/todo.html
@@ -48,7 +48,7 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Check and fix leaks in String
+<li><label><input type="checkbox" />Check and fix leaks in Sprite
 class</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
