Wrote what needs to be done for the Uniform class

--- a/todo.html
+++ b/todo.html
@@ -48,8 +48,8 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Check and fix leaks in Sprite
-class</label></li>
+<li><label><input type="checkbox" />Change Uniform system to hash
+datastructure (current version is insane)</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
