--- a/todo.html
+++ b/todo.html
@@ -48,7 +48,10 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Bring up dry clothes</label></li>
+<li><label><input type="checkbox" />Figure out why fpscounter leaks
+memory and harms performance</label></li>
+<li><label><input type="checkbox" />Fix smart pointer class
+Ptr</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
@@ -58,6 +61,7 @@ id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-rem
 time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
+<li><label><input type="checkbox" />Bring up dry clothes</label></li>
 <li><label><input type="checkbox" checked="" />Change Uniform system to
 hash datastructure (current version is insane) (edit: just fixed the
 leaks, it is still… very insane)</label></li>
