Added item to inbox

--- a/todo.html
+++ b/todo.html
@@ -47,10 +47,16 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Get mathematics notes from Scotland out of storage</li>
+</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Figure out when to meet supervisor game design</li>
 <li><input type="checkbox" disabled="" />
 Fix solid gles2drawable destructor a drawable is deleted (FPSCounter does not get removed every frame)</li>
 <li><input type="checkbox" disabled="" checked="" />
