--- a/todo.html
+++ b/todo.html
@@ -65,7 +65,7 @@ Cut nails</li>
 Figure out why fpscounter leaks memory and harms performance</li>
 <li><input type="checkbox" disabled="" />
 Fix smart pointer class Ptr</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Bring up dry clothes</li>
 <li><input type="checkbox" disabled="" checked="" />
 Change Uniform system to hash datastructure (current version is insane) (edit: just fixed the leaks, it is still… very insane)</li>
