--- a/todo.html
+++ b/todo.html
@@ -48,8 +48,8 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Implement multi texture support
-(bump maps!)</label></li>
+<li><label><input type="checkbox" />Fix all warnings in
+solid</label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
@@ -59,6 +59,8 @@ id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-rem
 time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
+<li><label><input type="checkbox" />Implement multi texture support
+(bump maps!)</label></li>
 <li><label><input type="checkbox" />Figure out why there is a ogl
 warning every time a texture is used for a drawable and see if is the
 reason performance is hampered when using fpscounter and if fixing it
