Added some inbox items

--- a/todo.html
+++ b/todo.html
@@ -49,12 +49,22 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Get mathematics notes from Scotland out of storage</li>
+Clean computer</li>
+<li><input type="checkbox" disabled="" />
+Do oblig 2 maths</li>
+<li><input type="checkbox" disabled="" />
+Write a little on report and GDD</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Make 10 more personal goals</li>
+<li><input type="checkbox" disabled="" />
+Figure out which one is most important and make it into a project</li>
+<li><input type="checkbox" disabled="" checked="" />
+Get mathematics notes from Scotland out of storage</li>
 <li><input type="checkbox" disabled="" />
 Figure out when to meet supervisor game design</li>
 <li><input type="checkbox" disabled="" />
