--- a/todo.html
+++ b/todo.html
@@ -56,6 +56,8 @@ Do oblig 2 maths</li>
 Write a little on report and GDD</li>
 <li><input type="checkbox" disabled="" />
 Fix all warnings in solid</li>
+<li><input type="checkbox" disabled="" />
+Clean the kitchen (especially before 27.)</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
