Added item to inbox

--- a/todo.html
+++ b/todo.html
@@ -49,6 +49,15 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
+Bring dry clothes up to room</li>
+<li><input type="checkbox" disabled="" />
+Cut nails</li>
+</ul>
+<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
+<h1 id="action">Action</h1>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" checked="" />
 Clean computer</li>
 <li><input type="checkbox" disabled="" />
 Do oblig 2 maths</li>
@@ -58,11 +67,6 @@ Write a little on report and GDD</li>
 Fix all warnings in solid</li>
 <li><input type="checkbox" disabled="" />
 Clean the kitchen (especially before 27.)</li>
-</ul>
-<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
-<h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Implement multi texture support (bump maps!)</li>
 <li><input type="checkbox" disabled="" />
