--- a/todo.html
+++ b/todo.html
@@ -49,14 +49,18 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Bring dry clothes up to room</li>
-<li><input type="checkbox" disabled="" />
-Cut nails</li>
+Update Unreal</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Bring dry clothes up to room</li>
+<li><input type="checkbox" disabled="" />
+Cut nails</li>
+<li><input type="checkbox" disabled="" />
+Find calculator (or buy new one and put name and number on it)</li>
 <li><input type="checkbox" disabled="" checked="" />
 Clean computer</li>
 <li><input type="checkbox" disabled="" />
