Added items to do over next couple of days

--- a/todo.html
+++ b/todo.html
@@ -47,6 +47,23 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><label><input type="checkbox" />Fix references game
+design</label></li>
+<li><label><input type="checkbox" />Find earlier reserach game
+design</label></li>
+<li><label><input type="checkbox" />Make button work TLG</label></li>
+<li><label><input type="checkbox" />Design first level TLG</label></li>
+<li><label><input type="checkbox" />Design first boss TLG</label></li>
+<li><label><input type="checkbox" />Design second level TLG</label></li>
+<li><label><input type="checkbox" />Design second boss TLG</label></li>
+<li><label><input type="checkbox" />Design third and last level
+TLG</label></li>
+<li><label><input type="checkbox" />Complete udemy c++ unreal section
+2</label></li>
+<li><label><input type="checkbox" />Complete udemy c++ unreal section
+3</label></li>
+</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
@@ -55,6 +72,10 @@ id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-rem
 time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
+<li><label><input type="checkbox" />Implement Dungeon
+Crawler</label></li>
+<li><label><input type="checkbox" />Implement a new game concept
+(investigate crime scene)</label></li>
 <li><label><input type="checkbox" checked="" />Update
 Unreal</label></li>
 <li><label><input type="checkbox" checked="" />Do oblig 2
@@ -74,7 +95,7 @@ which actually works</label></li>
 browser</label></li>
 <li><label><input type="checkbox" />Bring dry clothes up to
 room</label></li>
-<li><label><input type="checkbox" />Cut nails</label></li>
+<li><label><input type="checkbox" checked="" />Cut nails</label></li>
 <li><label><input type="checkbox" />Find calculator (or buy new one and
 put name and number on it)</label></li>
 <li><label><input type="checkbox" checked="" />Clean
