Added important items to inbox

--- a/todo.html
+++ b/todo.html
@@ -48,6 +48,23 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
+<li><label><input type="checkbox" />Finish writing game analysis draft
+-&gt; 5. March</label></li>
+<li><label><input type="checkbox" />Contribute to Art Bible 7.
+mars</label></li>
+<li><label><input type="checkbox" />Write a solid version of GDD -&gt;
+12. March</label></li>
+<li><label><input type="checkbox" />Write three pages of the report for
+board game -&gt; 1. March</label></li>
+</ul>
+<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
+#atComputer #errands #office #atHome #agendas #read</h6>
+<h1 id="action">Action</h1>
+<h6
+id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign
+time. Revisit. Flag what needs to be done today. The battle is to
+remember what to do!</h6>
+<ul class="task-list">
 <li><label><input type="checkbox" />Fix references game
 design</label></li>
 <li><label><input type="checkbox" />Find earlier reserach game
@@ -63,15 +80,6 @@ TLG</label></li>
 2</label></li>
 <li><label><input type="checkbox" />Complete udemy c++ unreal section
 3</label></li>
-</ul>
-<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
-#atComputer #errands #office #atHome #agendas #read</h6>
-<h1 id="action">Action</h1>
-<h6
-id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign
-time. Revisit. Flag what needs to be done today. The battle is to
-remember what to do!</h6>
-<ul class="task-list">
 <li><label><input type="checkbox" />Implement Dungeon
 Crawler</label></li>
 <li><label><input type="checkbox" />Implement a new game concept
