Added item to dreams

--- a/todo.html
+++ b/todo.html
@@ -365,6 +365,7 @@ Exam Programming II -&gt; 21.05.2024 #programming</li>
 <li>Get an amazing girlfriend and loving relationships</li>
 <li>Start the ultimate lifeform project</li>
 <li>Make The Castle</li>
+<li>Make Simulating Ecological Systems in C inspired video games</li>
 <li>Make Lingua Quest</li>
 <li>Make Speed Cars</li>
 <li>Make Spring Man</li>
