Added more items to inbox

--- a/todo.html
+++ b/todo.html
@@ -66,6 +66,10 @@ Make start game code and start game button -&gt; 6. March</li>
 Get the newest board game design into Tabletop Simulator -&gt; 6. March</li>
 <li><input type="checkbox" disabled="" />
 Make select amount of players screen (and display colors for each player, player 2 - 6) -&gt; 7. March</li>
+<li><input type="checkbox" disabled="" />
+Make first level prototype for The Castle prototype -&gt; 6. March</li>
+<li><input type="checkbox" disabled="" />
+Go to councelor and talk about my struggles in teamwork</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
