--- a/todo.html
+++ b/todo.html
@@ -49,20 +49,27 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
+Install War Selection</li>
+</ul>
+<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
+<h1 id="action">Action</h1>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" checked="" />
 Make a simple logo for board game -&gt; 6. March</li>
 <li><input type="checkbox" disabled="" />
 Write rule book for board game -&gt; 6. March</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make dwarf 3D model for board game -&gt; 6. March</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make egg 3D model for board game -&gt; 6. March</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make gemestone 3D model for board game -&gt; 6. March</li>
 <li><input type="checkbox" disabled="" />
 Import models into Tabletop Simulator -&gt; 6. March</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make start game code and start game button -&gt; 6. March</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Get the newest board game design into Tabletop Simulator -&gt; 6. March</li>
 <li><input type="checkbox" disabled="" />
 Make select amount of players screen (and display colors for each player, player 2 - 6) -&gt; 7. March</li>
@@ -70,11 +77,6 @@ Make select amount of players screen (and display colors for each player, player
 Make first level prototype for The Castle prototype -&gt; 6. March</li>
 <li><input type="checkbox" disabled="" />
 Go to councelor and talk about my struggles in teamwork</li>
-</ul>
-<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
-<h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul class="task-list">
 <li><input type="checkbox" disabled="" checked="" />
 Finish writing game analysis draft -&gt; 5. March</li>
 <li><input type="checkbox" disabled="" checked="" />
