--- a/todo.html
+++ b/todo.html
@@ -52,6 +52,14 @@
 Install War Selection</li>
 <li><input type="checkbox" disabled="" />
 Make background for gem chase rulebook darker</li>
+<li><input type="checkbox" disabled="" />
+Cut fingernails</li>
+<li><input type="checkbox" disabled="" />
+Recommend someone does the cards</li>
+<li><input type="checkbox" disabled="" />
+Update the game design document, add timeline and who does what</li>
+<li><input type="checkbox" disabled="" />
+Make a calendar for the team</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
