Added item to inbox

--- a/todo.html
+++ b/todo.html
@@ -62,6 +62,8 @@ Update the game design document, add timeline and who does what</li>
 Make a calendar for the team</li>
 <li><input type="checkbox" disabled="" />
 Make a schedule for the games</li>
+<li><input type="checkbox" disabled="" />
+Buy some beads</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
