Added two new items

--- a/todo.html
+++ b/todo.html
@@ -49,10 +49,33 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
+Add rulebook to tabletop simulator</li>
+<li><input type="checkbox" disabled="" />
+Add rules to notebook in tabletop simulator</li>
+<li><input type="checkbox" disabled="" />
+Add and test turns to tabletop simualtor</li>
+<li><input type="checkbox" disabled="" />
+Set all player colours in tabletop simulator</li>
+<li><input type="checkbox" disabled="" />
+Make custom background tabletop simulator</li>
+<li><input type="checkbox" disabled="" />
+Print 3D models for tabletop simulator</li>
+<li><input type="checkbox" disabled="" />
+Add mission and chance cards to tabletop simulator</li>
+<li><input type="checkbox" disabled="" />
+Generate some example cards for tabletop simulator</li>
+<li><input type="checkbox" disabled="" />
+Translate cards into English</li>
+</ul>
+<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
+<h1 id="action">Action</h1>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" checked="" />
 Install War Selection</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make background for gem chase rulebook darker</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Cut fingernails</li>
 <li><input type="checkbox" disabled="" />
 Recommend someone does the cards</li>
@@ -62,20 +85,15 @@ Update the game design document, add timeline and who does what</li>
 Make a calendar for the team</li>
 <li><input type="checkbox" disabled="" />
 Make a schedule for the games</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Buy some beads</li>
 <li><input type="checkbox" disabled="" />
 Make beginning of game Unreal engine</li>
-</ul>
-<h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
-<h1 id="action">Action</h1>
-<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
-<ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Review Getting Things Done in three months -&gt; march-2023</li>
 <li><input type="checkbox" disabled="" checked="" />
 Make a simple logo for board game -&gt; 6. March</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Write rule book for board game -&gt; 6. March</li>
 <li><input type="checkbox" disabled="" checked="" />
 Make dwarf 3D model for board game -&gt; 6. March</li>
@@ -83,7 +101,7 @@ Make dwarf 3D model for board game -&gt; 6. March</li>
 Make egg 3D model for board game -&gt; 6. March</li>
 <li><input type="checkbox" disabled="" checked="" />
 Make gemestone 3D model for board game -&gt; 6. March</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Import models into Tabletop Simulator -&gt; 6. March</li>
 <li><input type="checkbox" disabled="" checked="" />
 Make start game code and start game button -&gt; 6. March</li>
@@ -351,13 +369,13 @@ Go to programming lecture 1 -&gt; 11.01.2024</li>
 Go to programming lecture 3 -&gt; 25.01.2024</li>
 <li><input type="checkbox" disabled="" checked="" />
 Go to programming lecture 4 -&gt; 01.02.2024</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Go to programming lecture 5 -&gt; 08.02.2024</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Go to programming lecture 6 -&gt; 15.02.2024</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Go to programming lecture 7 -&gt; 22.02.2024</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Go to programming lecture 8 -&gt; 07.03.2024</li>
 <li><input type="checkbox" disabled="" />
 Go to programming lecture 9 -&gt; 14.03.2024</li>
