Added a few items and cleaned up todo list

--- a/todo.html
+++ b/todo.html
@@ -70,18 +70,10 @@ months -&gt; march-2023</label></li>
 <li><label><input type="checkbox" />Design second boss TLG</label></li>
 <li><label><input type="checkbox" />Design third and last level
 TLG</label></li>
-<li><label><input type="checkbox" checked="" />Complete udemy c++ unreal
-section 2</label></li>
-<li><label><input type="checkbox" checked="" />Complete udemy c++ unreal
-section 3</label></li>
 <li><label><input type="checkbox" />Implement Dungeon
 Crawler</label></li>
 <li><label><input type="checkbox" />Implement a new game concept
 (investigate crime scene)</label></li>
-<li><label><input type="checkbox" checked="" />Update
-Unreal</label></li>
-<li><label><input type="checkbox" checked="" />Do oblig 2
-maths</label></li>
 <li><label><input type="checkbox" />Implement The Ladder
 Game</label></li>
 <li><label><input type="checkbox" />Implement RPG Craft</label></li>
@@ -97,11 +89,8 @@ which actually works</label></li>
 browser</label></li>
 <li><label><input type="checkbox" />Bring dry clothes up to
 room</label></li>
-<li><label><input type="checkbox" checked="" />Cut nails</label></li>
 <li><label><input type="checkbox" />Find calculator (or buy new one and
 put name and number on it)</label></li>
-<li><label><input type="checkbox" checked="" />Clean
-computer</label></li>
 <li><label><input type="checkbox" />Do oblig 2 maths</label></li>
 <li><label><input type="checkbox" />Write a little on report and
 GDD</label></li>
@@ -121,28 +110,6 @@ now on</label></li>
 goals</label></li>
 <li><label><input type="checkbox" />Figure out which one is most
 important and make it into a project</label></li>
-<li><label><input type="checkbox" checked="" />Get mathematics notes
-from Scotland out of storage</label></li>
-<li><label><input type="checkbox" checked="" />Figure out when to meet
-supervisor game design</label></li>
-<li><label><input type="checkbox" checked="" />Fix solid gles2drawable
-destructor a drawable is deleted (FPSCounter does not get removed every
-frame)</label></li>
-<li><label><input type="checkbox" checked="" />Cut nails</label></li>
-<li><label><input type="checkbox" checked="" />Figure out why fpscounter
-leaks memory and harms performance</label></li>
-<li><label><input type="checkbox" checked="" />Fix smart pointer class
-Ptr</label></li>
-<li><label><input type="checkbox" checked="" />Bring up dry
-clothes</label></li>
-<li><label><input type="checkbox" checked="" />Change Uniform system to
-hash datastructure (current version is insane) (edit: just fixed the
-leaks, it is still… very insane)</label></li>
-<li><label><input type="checkbox" checked="" />Deliver Deichman
-books</label></li>
-<li><label><input type="checkbox" checked="" />Fix solid gles2drawable
-destructor a drawable is deleted (FPSCounter does not get removed every
-frame)</label></li>
 <li><label><input type="checkbox" />Complete learn rubix cube video <a
 href="https://www.youtube.com/watch?v=1t1OL2zN0LQ">https://www.youtube.com/watch?v=1t1OL2zN0LQ</a></label></li>
 <li><label><input type="checkbox" />Learn to play with a rubix
@@ -150,26 +117,6 @@ cube</label></li>
 <li><label><input type="checkbox" />Code fencing game in
 solid</label></li>
 <li><label><input type="checkbox" />Read for 20 min</label></li>
-<li><label><input type="checkbox" />Write for 20 min</label></li>
-<li><label><input type="checkbox" checked="" />Take out
-matavfall</label></li>
-<li><label><input type="checkbox" checked="" />Pante
-flasker</label></li>
-<li><label><input type="checkbox" checked="" />Take library books back
-(hamar and inn)</label></li>
-<li><label><input type="checkbox" checked="" />Decompile TLG and get
-assets in a good format</label></li>
-<li><label><input type="checkbox" checked="" />Wash clothes</label></li>
-<li><label><input type="checkbox" checked="" />Bring dry clothes up to
-room</label></li>
-<li><label><input type="checkbox" checked="" />Clean the floors in the
-flat</label></li>
-<li><label><input type="checkbox" checked="" />Wash the
-bathroom</label></li>
-<li><label><input type="checkbox" checked="" />Take out the
-trash</label></li>
-<li><label><input type="checkbox" checked="" />Clean the kitchen and
-living area</label></li>
 <li><label><input type="checkbox" />Add public licenced typefaces to
 engine</label></li>
 <li><label><input type="checkbox" />Make productivity software
@@ -279,44 +226,6 @@ actions. Waiting for the right time or on other people</h6>
 <h1 id="long-term-plan">Long term plan</h1>
 <h6 id="update-weekly">Update Weekly</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Exam Practice Mathematics
-#mathematics</label></li>
-<li><label><input type="checkbox" />Exam Mathematics II -&gt; 07.05.2024
-#mathematics</label></li>
-<li><label><input type="checkbox" />Exam Game Deisgn -&gt; 13.05.2024
-#design</label></li>
-<li><label><input type="checkbox" />Exam Programming II -&gt; 21.05.2024
-#programming</label></li>
-<li><label><input type="checkbox" checked="" />Go to programming lecture
-1 -&gt; 11.01.2024</label></li>
-<li><label><input type="checkbox" checked="" />Go to programming lecture
-3 -&gt; 25.01.2024</label></li>
-<li><label><input type="checkbox" checked="" />Go to programming lecture
-4 -&gt; 01.02.2024</label></li>
-<li><label><input type="checkbox" checked="" />Go to programming lecture
-5 -&gt; 08.02.2024</label></li>
-<li><label><input type="checkbox" checked="" />Go to programming lecture
-6 -&gt; 15.02.2024</label></li>
-<li><label><input type="checkbox" checked="" />Go to programming lecture
-7 -&gt; 22.02.2024</label></li>
-<li><label><input type="checkbox" checked="" />Go to programming lecture
-8 -&gt; 07.03.2024</label></li>
-<li><label><input type="checkbox" />Go to programming lecture 9 -&gt;
-14.03.2024</label></li>
-<li><label><input type="checkbox" />Go to programming lecture 10 -&gt;
-21.03.2024</label></li>
-<li><label><input type="checkbox" />Go to programming lecture 11 -&gt;
-04.04.2024</label></li>
-<li><label><input type="checkbox" />Go to programming lecture 12 -&gt;
-11.04.2024</label></li>
-<li><label><input type="checkbox" />Go to programming lecture 13 -&gt;
-18.04.2024</label></li>
-<li><label><input type="checkbox" />Go to programming lecture 14 -&gt;
-25.04.2024</label></li>
-<li><label><input type="checkbox" />Go to programming lecture 15 -&gt;
-02.05.2024</label></li>
-<li><label><input type="checkbox" />Modern Graphics Programming files
-#programming</label></li>
 <li><label><input type="checkbox" />Complete Piano4All</label></li>
 <li><label><input type="checkbox" />Complete Blender Character Creator
 v2.0 for Video Games Design Course</label></li>
@@ -325,12 +234,17 @@ Modelling for Beginners</label></li>
 <li><label><input type="checkbox" checked="" />Complete Semester 1 Game
 School <a
 href="https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host">https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host</a></label></li>
-<li><label><input type="checkbox" />Complete Semester 2 Game School <a
+<li><label><input type="checkbox" checked="" />Complete Semester 2 Game
+School <a
 href="https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host">https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host</a></label></li>
 <li><label><input type="checkbox" />Do drawabox.com course</label></li>
 <li><label><input type="checkbox" />Learn to make music <a
 href="https://learningmusic.ableton.com">https://learningmusic.ableton.com</a></label></li>
 <li><label><input type="checkbox" />Write paper for mdpi</label></li>
+<li><label><input type="checkbox" />Complete Unreal Engine course on
+udemy Ultimate</label></li>
+<li><label><input type="checkbox" />Complete Unreal Engine course on
+udemy FPS</label></li>
 </ul>
 <h1 id="project-reference-material">Project reference material</h1>
 <h6 id="todo-maybe-make-a-website-for-each-project">TODO: Maybe make a
