Checked off things I did today

--- a/todo.html
+++ b/todo.html
@@ -48,9 +48,10 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><label><input type="checkbox" />Go for a walk in the
+<li><label><input type="checkbox" checked="" />Go for a walk in the
 morning</label></li>
-<li><label><input type="checkbox" />Buy the book Jacked</label></li>
+<li><label><input type="checkbox" checked="" />Buy the book
+Jacked</label></li>
 <li><label><input type="checkbox" />Read for 20 minutes</label></li>
 <li><label><input type="checkbox" />Draw for 30 minutes</label></li>
 </ul>
