Added some items to list

--- a/todo.html
+++ b/todo.html
@@ -49,15 +49,19 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Consider what to do with Paulius</li>
+Take Paulius to Lier or change plan</li>
 <li><input type="checkbox" disabled="" />
 Go to dentist</li>
 <li><input type="checkbox" disabled="" />
 Help Paul with RTS</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Help Erik with coding</li>
 <li><input type="checkbox" disabled="" />
 Go to inspection meeting on Thursday</li>
+<li><input type="checkbox" disabled="" />
+Retrieve flash card from Håvard</li>
+<li><input type="checkbox" disabled="" />
+Begin learning about databases and look at <a href="https://studiekatalog.edutorium.no/inn/en/course/2DAN101/2024-autumn">Databases and Networks</a></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
@@ -259,6 +263,8 @@ Write paper for mdpi</li>
 Complete Unreal Engine course on udemy Ultimate</li>
 <li><input type="checkbox" disabled="" />
 Complete Unreal Engine course on udemy FPS</li>
+<li><input type="checkbox" disabled="" />
+Complete third semester Game School <a href="https://studiekatalog.edutorium.no/inn/nb/programme/B2VISIM/2023">https://studiekatalog.edutorium.no/inn/nb/programme/B2VISIM/2023</a></li>
 </ul>
 <h1 id="project-reference-material">Project reference material</h1>
 <h6 id="todo-maybe-make-a-website-for-each-project">TODO: Maybe make a website for each project?</h6>
